
  * Lwt_stream.return, Lwt_stream.return_lwt: singleton stream constructors (#864, Boning Dong).

  * Add ?to_dir param from Unix.symlink to Lwt_unix.symlink wrapper (#884, Antonin Décimo).

  * Lwt_stream.of_lwt_seq to convert an Lwt-sequence into an Lwt-stream (#873)

  * Support IPv6 (always) and PF_UNIX (with OCaml >= 4.14) socketpair on Windows (#870, #876, Antonin Décimo, David Allsopp).

====== Misc ======

  * Code quality improvement: remove an uneeded Obj.magic (#844, Benoit Montagu).

  * On Windows, use the Unicode API in C stubs and functions introduced in OCaml 4.06 to handle Unicode strings. Raise the minimum requirement to OCaml 4.06 (on Windows only). (#843, Antonin Décimo)

===== 5.4.2 =====

====== Bugs fixed ======

  * Fix compilation on Windows by providing missing dummy stubs (#868, Andreas Hauptmann, Antonin Décimo).


===== 5.4.1 =====

====== Bugs fixed ======

  * Fix Lwt_fmt.stderr to actually point to stderr (#852, #850, Volker Diels-Grabsch).

  * Make temporary files created by Lwt_io.with_temp_dir deletable on Windows by removing the RO bit (#849, #861, Antonin Décimo).

  * Handle ECONNABORTED in Lwt_io.establish_server* (#829, #830, Reynir Björnsson, Hannes Mehnert).



====== Bugfixes ======

  * Fix Lwt_fmt.stderr to actually point to stderr (#852, #850, Volker Diels-Grabsch).

  * Lwt_io.establish_server* handles ECONNABORTED (#829, #830, Reynir Björnsson)


===== 5.4.0 (2020-12-16) =====

====== Installability ======

  * Support for OCaml 4.12 (#804, #826, Kate Deplaix).

  * lwt_ppx now uses ppxlib. This introduce a transitive dependency to OCaml.4.04 (#807, Philippe Veber).

====== Bugfixes ======

  * Catch exceptions in Lwt_react.of_stream (#809, Petter A. Urkedal).

  * Avoid segfaults in Lwt_unix.tcsetattr (#798, Frédéric Fortier).

====== Additions ======

  * fork method in Lwt_engine. This method is a noop in the released engines but it paves the way to a libuv-based engine (#811, Ulrik Strid, Anton Bachin).
